--- a/src/pages/list/List.css
+++ b/src/pages/list/List.css
@@ -17,6 +17,7 @@
   position: sticky;
   padding: 10px;
   top: 10px;
+  height: max-content;
 }
 
 .listResult {
@@ -26,4 +27,51 @@
   font-size: 20;
   margin-bottom: 10px;
   color: grey;
+}
+.lsItem {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+.lsItem > label {
+  font-size: 12px;
+}
+.lsItem > input {
+  height: 30px;
+  border: none;
+  padding: 5px;
+}
+.lsItem > span {
+  height: 30px;
+
+  padding: 5px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.lsOptionItem {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  color: #555;
+  font-size: 12px;
+}
+.lsOptionInput {
+  border: none;
+  width: 50px;
+}
+.lsOptions {
+  padding: 10px;
+}
+.listSearch > button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  color: white;
+  background-color: #0071c2;
+  font-weight: 500;
+  cursor: pointer;
 }
