--- a/src/pages/hotel/Hotel.css
+++ b/src/pages/hotel/Hotel.css
@@ -93,3 +93,41 @@
   border-radius: 5px;
   font-weight: 500;
 }
+
+.slider {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.426);
+  display: flex;
+  align-items: center;
+  z-index: 999;
+}
+.sliderWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sliderImg {
+  width: 80%;
+  height: 80vh;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 40px;
+  color: lightgray;
+  cursor: pointer;
+}
+.arrow {
+  margin: 20px;
+  font-size: 40px;
+  color: lightgray;
+  cursor: pointer;
+}
